--- a/imports/ui/Message/style.css
+++ b/imports/ui/Message/style.css
@@ -4,29 +4,24 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: .4em .5em;
+    padding: .4em 1em;
     font-size: .9em;
     box-sizing: border-box;
-    background-color: rgba(200, 200, 200, .2);
-    margin-bottom: 20px;
+    background-color: rgba(226, 223, 0, 0.35);
+    margin: 10px 10px 0;
     max-width: 80vw;
     flex-shrink: 0;
     flex-direction: column;
     align-items: flex-start;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-radius: 8px;
 }
 
-.container:first-child {
-    margin-top: 20px;
+.container:last-child {
+    margin-bottom: 20px;
 }
 
 .container.my {
     align-self: flex-end;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
     background-color: rgba(100, 187, 31, 0.3);
 }
 
